Fixed various issues with device discovery and disconnect on Android, and writing charactaristics on iOS

--- a/Source/Platform Stacks/Robotics.Mobile.Core/Robotics.Mobile.Core.csproj
+++ b/Source/Platform Stacks/Robotics.Mobile.Core/Robotics.Mobile.Core.csproj
@@ -10,6 +10,7 @@
     <AssemblyName>Robotics.Mobile.Core</AssemblyName>
     <TargetFrameworkProfile>Profile78</TargetFrameworkProfile>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <ReleaseVersion>.3</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -67,12 +68,8 @@
     <EmbeddedResource Include="Bluetooth\LE\KnownDescriptors.json" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Utils\" />
-    <Folder Include="Messaging\" />
-  </ItemGroup>
-  <ItemGroup>
     <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.6.0.5\lib\portable-net45+wp80+win8+wpa81\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\packages\Newtonsoft.Json.8.0.3\lib\portable-net45+wp80+win8+wpa81+dnxcore50\Newtonsoft.Json.dll</HintPath>
     </Reference>
   </ItemGroup>
 </Project>
