--- a/Source/Platform Stacks/Robotics.Mobile.Core.iOS/Robotics.Mobile.Core.iOS.csproj
+++ b/Source/Platform Stacks/Robotics.Mobile.Core.iOS/Robotics.Mobile.Core.iOS.csproj
@@ -9,6 +9,7 @@
     <RootNamespace>Robotics.Mobile.Core</RootNamespace>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AssemblyName>Robotics.Mobile.Core.iOS</AssemblyName>
+    <ReleaseVersion>.3</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -41,7 +42,6 @@
     <Folder Include="Bluetooth\LE\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.MonoTouch.CSharp.targets" />
-  <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
     <Compile Include="BluetoothLE\BluetoothLEManager.cs" />
     <Compile Include="Bluetooth\LE\Descriptor.cs" />
