--- a/Source/Platform Stacks/Robotics.Mobile.Core.iOS64/Robotics.Mobile.Core.iOS64.csproj
+++ b/Source/Platform Stacks/Robotics.Mobile.Core.iOS64/Robotics.Mobile.Core.iOS64.csproj
@@ -9,6 +9,7 @@
     <RootNamespace>Robotics.Mobile.Core</RootNamespace>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AssemblyName>Robotics.Mobile.Core.iOS</AssemblyName>
+    <ReleaseVersion>.3</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
